2026-01-30  Zhengyi Fu  <i@fuzy.me>

	* transient/values.el (magit-log:magit-log-mode): Remove --graph and --color.

2026-01-30  Zhengyi Fu  <i@fuzy.me>

	Update eglot configuration

	* init.el (lsp-server-nix-packages): New variable.
	(eglot--executable-find, eglot--guess-contact): New advice.
	(+consult-eglot-symbols--highlight): New defun.
	(consult-eglot-symbols): Use `+consult-eglot-symbols--highlight'.

2026-01-29  Zhengyi Fu  <i@fuzy.me>

	Update default completion UI configuration

	* init.el (completions-format): Set to `one-column'.
	(completions-detailed, completions-group): Set to t.
	(completions-sort): Set to `historical'.
	(completions-max-height): Set to 15.
	(minibuffer-visible-completions): Set to `up-down'.
	(completion-eager-update, completion-eager-display): Set to t.
	(completion-auto-help): Set to `always'.
	(completion-show-help, completion-show-inline-help): Set to nil.

2026-01-29  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el ("Moonshot"): Update moonshot models.

2026-01-27  Zhengyi Fu  <i@fuzy.me>

	Use pipes in compilation-mode

	* init.el (process-use-pipe): New function.

2026-01-27  Zhengyi Fu  <i@fuzy.me>

	* init.el: Enable envrc-global-mode.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	nixos-options: Fix compile warning

	* user-lisp/nixos-options.el (nixos-options--make-alist): Use
	`push' instead of `add-to-list'.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	Add consult-nixos

	* user-lisp/nixos-options.el:
	* user-lisp/consult-nixos.el: New files.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	* user-lisp/gptel-config.el: Add directive for generating commit messages.

2026-01-23  Zhengyi Fu  <i@fuzy.me>

	* init.el (send-password-to-process): Fix the prompt.

2026-01-22  Zhengyi Fu  <i@fuzy.me>

	* templates/bash.eld: Add new template for Bash shell scripts.

2026-01-22  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not enable `corfu-popupinfo-mode'.

2026-01-21  Zhengyi Fu  <i@fuzy.me>

	Add per-project history for project-compile
